--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A slack bot for making wagers with your friends",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/KeriWarr/pledge-bot/issues"
   },
-  "homepage": "https://github.com/KeriWarr/pledge-bot#readme"
+  "homepage": "https://github.com/KeriWarr/pledge-bot#readme",
+  "dependencies": {
+    "botstrap": "^0.15.4"
+  }
 }
