--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A slack bot for making wagers with your friends",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "build": "babel index.js > run.js",
+    "run": "node run.js",
+    "start": "npm run build; npm run run"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,9 @@
   },
   "homepage": "https://github.com/KeriWarr/pledge-bot#readme",
   "dependencies": {
-    "botstrap": "^0.15.4"
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "botstrap": "^0.15.4",
+    "lodash": "^4.16.4"
   }
 }
