--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "A slack bot for making wagers with your friends",
   "main": "index.js",
   "scripts": {
+    "dev": "babel src -w -d compiled & nodemon -w compiled index.js",
     "build": "babel src --out-dir compiled",
     "run": "node index.js",
-    "start": "npm run build; npm run run"
+    "start": "npm run build; npm run run",
+    "lint": "eslint . --ext .js --ext .jsx || true",
+    "lint-with-errors": "eslint . --ext .js --ext .jsx"
   },
   "repository": {
     "type": "git",
@@ -29,6 +32,15 @@
     "babel-preset-es2015": "^6.16.0",
     "botstrap": "^0.15.4",
     "lodash": "^4.16.4",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "^1.6.3",
+    "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
+    "nodemon": "^1.11.0"
   }
 }
