--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "babel-cli": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-2": "^6.17.0",
     "botstrap": "^0.15.4",
     "lodash": "^4.16.4",
     "node-fetch": "^1.6.3",
