--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
     "botstrap": "^0.15.4",
+    "dotenv": "^2.0.0",
     "lodash": "^4.16.4",
     "node-fetch": "^1.6.3",
     "winston": "^2.2.0"
