--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,12 @@
-{ "presets": ["es2015", "stage-2"] }
+{
+  "plugins": ["transform-object-rest-spread"],
+  "presets": [[
+    "env",
+    {
+      "targets": {
+        "node": 6.9
+      }
+    }
+  ]],
+  "sourceMaps": true,
+}
