--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-env": "0.0.6",
     "botstrap": "^0.15.4",
     "dotenv": "^2.0.0",
+    "eslint-plugin-import": "^1.16.0",
     "humps": "^2.0.0",
     "lodash": "^4.16.4",
     "node-fetch": "^1.6.3",
