--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A slack bot for making wagers with your friends",
   "main": "index.js",
   "scripts": {
-    "dev": "babel src -w -d compiled & nodemon -w compiled index.js",
+    "dev": "babel src -w --source-maps -d compiled & nodemon -w compiled index.js",
     "build": "babel src -d compiled",
     "run": "node index.js",
     "start": "npm run build; npm run run",
@@ -37,6 +37,7 @@
     "humps": "^2.0.0",
     "lodash": "^4.16.4",
     "node-fetch": "^1.6.3",
+    "source-map-support": "^0.4.5",
     "winston": "^2.2.0"
   },
   "devDependencies": {
