--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "6",
     "eslint": "^3.8.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^2.0.1",
